Bug 1190019: [MSE] P1. Remove cycle between SourceBuffer and TrackBuffersManager. r=cpearce

Instead we use a a ref-counted attribute holder to store those arguments.